# E-Beggars-spam-filter

./: .gitignore  Cargo.toml  README.md
src/: filter.rs  github.rs  main.rs  models.rs
