[package]
name = "E-Beggars-spam-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde_json = "1.0.113"
futures = "0.3.30"
chrono = "0.4.34"
dotenv = "0.15.0"
reqwest = {version = "0.11.24", features = ["json"]}
tokio = {version = "1.36.0", features = ["full"]}
serde = {version = "1.0.196", features = ["derive"]}

